fixed flex alignment

--- a/src/stylesheets/css/main.css
+++ b/src/stylesheets/css/main.css
@@ -216,6 +216,9 @@ header {
         border-bottom: 2px solid #45475D;
         display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        align-content: center;
         flex-wrap: wrap;
         /* Tooltip container */
         /* Tooltip text */
