--- a/src/stylesheets/scss/_geo.scss
+++ b/src/stylesheets/scss/_geo.scss
@@ -70,6 +70,9 @@
 				border-bottom:2px solid $midnight;
 				display: flex;
 				flex-direction: row;
+				align-items:center;
+				justify-content:flex-start;
+				align-content:center;
 				flex-wrap:wrap;
 
 				.legend-val{
